# rutoken-gnutls-example

./: CMakeLists.txt  README.md
rutoken/include/: common.h
rutoken/lib/: libpki-core.so.1.15
src/: RutokenTest.cpp  gnutls_crypto.cpp  gnutls_crypto.h
